WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121788
[GTK] Fix accelerated compositing disabling under Wayland displays
https://bugs.webkit.org/show_bug.cgi?id=121788
Summary
[GTK] Fix accelerated compositing disabling under Wayland displays
Zan Dobersek
Reported
2013-09-23 07:38:53 PDT
[GTK] Fix accelerated compositing disabling under Wayland displays
Attachments
Patch
(1.53 KB, patch)
2013-09-23 07:42 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2013-09-23 07:42:35 PDT
Created
attachment 212348
[details]
Patch
Zan Dobersek
Comment 2
2013-09-24 06:08:42 PDT
Comment on
attachment 212348
[details]
Patch Clearing flags on attachment: 212348 Committed
r156327
: <
http://trac.webkit.org/changeset/156327
>
Zan Dobersek
Comment 3
2013-09-24 06:08:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug