[GTK] Fix accelerated compositing disabling under Wayland displays https://bugs.webkit.org/show_bug.cgi?id=121788

Reviewed by Gustavo Noronha Silva.

* webkit/webkitwebview.cpp:
(updateAcceleratedCompositingSetting): Fix a ridiculous early return in the case of disabling the accelerated
compositing setting. There's no need to re-disable the setting if it was already disabled, but it should
definitely be disabled if the setting was previously enabled.


Canonical link: https://commits.webkit.org/139835@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156327 268f45cc-cd09-0410-ab3c-d52691b4dbfc